# https://pypi.org/project/setupcfg-generator/
[metadata]
name = shell-cache
version = 2019.5.17
url = https://github.com/looking-for-a-job/shell-cache
classifiers = file: classifiers.txt
description = file: description.txt
long_description = file: README.md
long_description_content_type = text/markdown
keywords = cache

[options]
install_requires = 
	setuptools
scripts = 
	scripts/shell-cache
